FEAT: La app ya crea nuevas aseguradoras, y se pueden visualizar la información de cada aseguradora. Ya lista para integrar Actualizar y Borrar Aseguradora

--- a/src/style.css
+++ b/src/style.css
@@ -9,14 +9,14 @@
   font-weight: 400;
 
   color-scheme: light;
-  
+
   /* Light theme variables */
-  --color-white: #FFFFFF;
-  --color-green-light: #9BC53D;
-  --color-navy: #373F51;
-  --color-blue: #3C7A89;
-  --color-blue-light: #8CBFCF;
-  --color-green: #9BC53D;
+  --color-white: #ffffff;
+  --color-green-light: #9bc53d;
+  --color-navy: #373f51;
+  --color-blue: #3c7a89;
+  --color-blue-light: #8cbfcf;
+  --color-green: #9bc53d;
 
   --color-background: var(--color-white);
   --color-background-rgb: 255, 255, 255;
@@ -26,10 +26,10 @@
   --color-navbar-bg: rgba(255, 255, 255, 0.9);
   --color-navbar-shadow: rgba(55, 63, 81, 0.1);
   --color-accent: var(--color-green-light);
-  
+
   /* Input variables */
-  --input-bg: #F3F4F6;
-  --input-border: #E5E7EB;
+  --input-bg: #f3f4f6;
+  --input-border: #e5e7eb;
   --input-text: var(--color-navy);
   --input-placeholder: rgba(26, 26, 26, 0.5);
   --container-bg: rgba(255, 255, 255, 0.65);
@@ -40,8 +40,8 @@
 /* Dark theme styles */
 :root.dark {
   color-scheme: dark;
-  
-  --color-background: #222B45;
+
+  --color-background: #222b45;
   --color-background-rgb: 34, 43, 69;
   --color-text: var(--color-white);
   --color-primary: var(--color-blue-light);
@@ -49,7 +49,7 @@
   --color-navbar-bg: rgba(26, 32, 44, 0.9);
   --color-navbar-shadow: rgba(0, 0, 0, 0.4);
   --color-accent: var(--color-green);
-  
+
   /* Input variables for dark mode */
   --input-bg: rgba(255, 255, 255, 0.08);
   --input-border: rgba(255, 255, 255, 0.15);
@@ -66,7 +66,9 @@
     @apply m-0 min-w-[320px] min-h-screen;
     color: var(--color-text);
     background-color: var(--color-background);
-    transition: color 0.3s, background-color 0.3s;
+    transition:
+      color 0.3s,
+      background-color 0.3s;
   }
 
   a {
